--- a/exam.html
+++ b/exam.html
@@ -8,7 +8,7 @@
 <body>
    <header>
        <div class="name">Dasteen<span>.Blog</span></div>
-       <nav>
+       <nav class="navigation-mane">
            <a href="#">Home</a>
            <a href="#">Category</a>
            <a href="#">About Me</a>
@@ -63,6 +63,50 @@
             <div class="card">
                 <h3>React JS</h3>
                 <img src="img/logos_react.svg" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="featured">
+        <div class="featured-category">
+            <h2>Featured Article</h2>
+            <a href="#">See All Article</a>
+        </div>
+        <div class="Fundamental">
+            <div class="Fundamental-card">
+                <img src="img-featured/fundamental.png" alt="">
+                <h3>Fundamental of javascript</h3>
+                <div class="meta">
+                    <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                    <span>Dasteen</span>
+                    <span>Jan 10, 2022     ∙     3 min read</span>
+                </div>
+            </div>
+            <div class="Fundamental-card">
+                <img src="img-featured/grid.png" alt="">
+                <h3>Grid CSS make your life easier</h3>
+                <div class="meta">
+                    <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                    <span>Dasteen</span>
+                    <span>Jan 10, 2022     ∙     3 min read</span>
+                </div>
+            </div>
+            <div class="Fundamental-card">
+                <img src="img-featured/Make.png" alt="">
+                <h3>Make animated light mode and dark mode toggle with CSS</h3>
+                <div class="meta">
+                    <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                    <span>Dasteen</span>
+                    <span>Jan 10, 2022     ∙     3 min read</span>
+                </div>
+            </div>
+            <div class="Fundamental-card">
+                <img src="img-featured/tik-tak.png" alt="">
+                <h3>Make tic tac toe games with react JS</h3>
+                <div class="meta">
+                    <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                    <span>Dasteen</span>
+                    <span>Jan 10, 2022     ∙     3 min read</span>
+                </div>
             </div>
         </div>
     </section>
