--- a/exam.html
+++ b/exam.html
@@ -7,22 +7,22 @@
 </head>
 <body>
    <header>
-       <div class="name">Dasteen<span>.Blog</span></div>
-       <nav class="navigation-mane">
+       <div class="logo">Dasteen<span>.Blog</span></div>
+       <nav>
            <a href="#">Home</a>
            <a href="#">Category</a>
            <a href="#">About Me</a>
-           <a href="#"><svg class="one" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+           <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
                <path d="M7.08329 12.7501C8.34057 12.7498 9.56161 12.3289 10.552 11.5544L13.6658 14.6682L14.6674 13.6667L11.5536 10.5528C12.3285 9.56234 12.7497 8.34102 12.75 7.08341C12.75 3.95896 10.2077 1.41675 7.08329 1.41675C3.95883 1.41675 1.41663 3.95896 1.41663 7.08341C1.41663 10.2079 3.95883 12.7501 7.08329 12.7501ZM7.08329 2.83341C9.42717 2.83341 11.3333 4.73954 11.3333 7.08341C11.3333 9.42729 9.42717 11.3334 7.08329 11.3334C4.73942 11.3334 2.83329 9.42729 2.83329 7.08341C2.83329 4.73954 4.73942 2.83341 7.08329 2.83341Z" fill="#2B2C34"/>
            </svg>Search</a>
-           <a href="#" class="coffee"><svg class="too" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+           <a href="#" class="coffee"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                <path d="M20.2161 6.41496L20.0841 5.74896C19.9651 5.15096 19.6961 4.58596 19.0831 4.36996C18.8861 4.30096 18.6631 4.27196 18.5131 4.12896C18.3611 3.98596 18.3171 3.76296 18.2821 3.55696C18.2171 3.17896 18.1571 2.80096 18.0901 2.42396C18.0331 2.09896 17.9881 1.73396 17.8401 1.43696C17.6451 1.03696 17.2431 0.802961 16.8441 0.648961C16.6393 0.57239 16.4303 0.507617 16.2181 0.454961C15.2181 0.191961 14.1681 0.0949609 13.1411 0.0389609C11.9078 -0.0288453 10.6713 -0.00812547 9.44105 0.100961C8.52605 0.183961 7.56105 0.284961 6.69105 0.600961C6.37305 0.716961 6.04505 0.856961 5.80305 1.10196C5.50605 1.40396 5.41005 1.87196 5.62605 2.24796C5.78005 2.51496 6.04105 2.70396 6.31805 2.82796C6.67805 2.98996 7.05505 3.11196 7.44105 3.19396C8.51605 3.43196 9.63005 3.52496 10.7281 3.56396C11.9461 3.61396 13.1651 3.57396 14.3781 3.44596C14.6771 3.41296 14.9761 3.37296 15.2741 3.32696C15.6261 3.27296 15.8521 2.81396 15.7481 2.49296C15.6241 2.10996 15.2911 1.96196 14.9141 2.01996C14.4481 2.09396 13.9541 2.12796 13.5321 2.16596C12.3551 2.24596 11.1741 2.24796 9.99605 2.17196C9.60952 2.14638 9.22372 2.1107 8.83905 2.06496C8.75305 2.05496 8.65905 2.03996 8.58105 2.02896C8.33805 1.99296 8.09705 1.94896 7.85705 1.89896C7.74605 1.87196 7.74605 1.71396 7.85705 1.68696H7.86205C8.13905 1.62696 8.41905 1.57896 8.70005 1.53996H8.70205C8.83305 1.53096 8.96505 1.50796 9.09605 1.49196C10.234 1.37386 11.3787 1.33376 12.5221 1.37196C13.1961 1.39096 13.8691 1.43896 14.5391 1.51596L14.7671 1.54696C15.0341 1.58696 15.3001 1.63496 15.5651 1.69196C15.9571 1.77696 16.4601 1.80496 16.6351 2.23396C16.6901 2.37096 16.7151 2.52196 16.7461 2.66496L17.0651 4.14896C17.0718 4.18078 17.072 4.21365 17.0655 4.24553C17.059 4.27741 17.046 4.30761 17.0273 4.33425C17.0087 4.36089 16.9847 4.3834 16.957 4.40038C16.9292 4.41737 16.8983 4.42846 16.8661 4.43296H16.8631C16.8261 4.43896 16.7881 4.44296 16.7511 4.44796C15.1781 4.64865 13.5938 4.74719 12.0081 4.74296C10.4369 4.74134 8.86736 4.6398 7.30905 4.43896C7.16905 4.42196 7.01605 4.39696 6.89205 4.37896C6.56605 4.33096 6.24305 4.27096 5.91905 4.21796C5.52605 4.15296 5.15105 4.18596 4.79605 4.37896C4.50605 4.53896 4.26905 4.78296 4.12105 5.07996C3.96705 5.39596 3.92205 5.73996 3.85405 6.07996C3.78505 6.41996 3.67805 6.78696 3.71905 7.13596C3.80605 7.88896 4.33205 8.50096 5.08905 8.63796C8.83252 9.30602 12.6526 9.43265 16.4321 9.01396C16.5039 9.00579 16.5766 9.01384 16.6449 9.03751C16.7131 9.06118 16.7752 9.09987 16.8266 9.15073C16.8779 9.20159 16.9172 9.26333 16.9415 9.33138C16.9658 9.39944 16.9745 9.47208 16.9671 9.54396L16.8961 10.241L15.8781 20.148C15.8371 20.558 15.8311 20.98 15.7531 21.385C15.6311 22.022 15.2001 22.413 14.5711 22.556C13.9941 22.687 13.4061 22.756 12.8151 22.761C12.1591 22.765 11.5051 22.736 10.8491 22.739C10.1501 22.743 9.29305 22.679 8.75405 22.159C8.27905 21.701 8.21405 20.985 8.14905 20.366L7.41805 13.353L7.09605 10.259C7.05905 9.90796 6.81005 9.56396 6.41805 9.58096C6.08205 9.59596 5.70005 9.88096 5.74005 10.26L5.96805 12.445L6.91705 21.557C7.06405 22.901 8.09105 23.625 9.36305 23.829C10.1051 23.949 10.8661 23.973 11.6201 23.985C12.5861 24.001 13.5621 24.038 14.5121 23.863C15.9201 23.605 16.9771 22.665 17.1281 21.206C17.4681 17.874 17.8111 14.543 18.1521 11.211L18.3671 9.12396C18.3776 9.02047 18.4213 8.92315 18.4915 8.84641C18.5618 8.76968 18.6549 8.71762 18.7571 8.69796C19.1591 8.61996 19.5441 8.48596 19.8311 8.17996C20.2861 7.69196 20.3771 7.05696 20.2161 6.41496ZM18.7381 7.18696C18.5931 7.32396 18.3751 7.38796 18.1601 7.41996C15.7441 7.77896 13.2941 7.95996 10.8521 7.87996C9.10405 7.81996 7.37505 7.62596 5.64505 7.38196C5.47505 7.35796 5.29205 7.32696 5.17505 7.20196C4.95505 6.96596 5.06405 6.49196 5.12105 6.20696C5.17305 5.94696 5.27305 5.59796 5.58405 5.56096C6.06805 5.50396 6.63005 5.70896 7.11005 5.78096C7.68705 5.86896 8.26605 5.93996 8.84705 5.99296C11.3271 6.21896 13.8491 6.18296 16.3191 5.85296C16.7691 5.79296 17.2181 5.72296 17.6641 5.64296C18.0631 5.57096 18.5041 5.43696 18.7441 5.84896C18.9101 6.12996 18.9321 6.50596 18.9061 6.82296C18.8982 6.9614 18.8377 7.0916 18.7371 7.18696H18.7381Z" fill="#FFFFFE"/>
                <path d="M9.47012 11.8751C10.7391 11.8751 11.7171 11.4571 12.5791 11.0871C13.3481 10.7581 14.0131 10.4741 14.8391 10.4741C15.2901 10.4783 15.737 10.5588 16.1611 10.7121L15.2211 20.6621C15.1561 21.4421 14.5051 22.0421 13.7221 22.0421C13.7221 22.0421 12.3831 22.1071 11.9361 22.1071C11.5211 22.1071 10.2781 22.0421 10.2781 22.0421C9.49512 22.0421 8.84312 21.4421 8.77812 20.6621L7.90112 11.6581C8.41195 11.8008 8.93973 11.8738 9.47012 11.8751Z" fill="#FFDD00"/>
            </svg>Buy Me A Coffee</a>
        </nav>
    </header>
-   <section class="hero">
-       <div class="text">
+   <section class="main">
+       <div class="main-text">
            <h1>Hi, i’m Dasteen
                Front end dev</h1>
            <p>On this blog I share tips and tricks, frameworks, projects, tutorials, etc
@@ -32,7 +32,7 @@
            <input type="email" placeholder="Enter your email here....">
            <button>Subscribe</button>
        </div>
-       <div class="image">
+       <div class="main-image">
            <img src="img/hero-image.png" alt="">
        </div>
    </section>
@@ -110,5 +110,208 @@
             </div>
         </div>
     </section>
+   <section class="featured">
+       <div class="css-category">
+           <h2>CSS</h2>
+           <a href="#">See All Article</a>
+       </div>
+       <div class="Fundamental">
+           <div class="Fundamental-card">
+               <img src="img-featured/flexbox.png" alt="">
+               <h3>Flexbox cSS : Everything you need to know</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/grid.png" alt="">
+               <h3>Grid CSS make your life easier</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/comp.png" alt="">
+               <h3>3 easy way to make div center</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/Make.png" alt="">
+               <h3>Make tic tac toe games with react JS</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+       </div>
+   </section>
+   <section class="featured">
+       <div class="css-category">
+           <h2>javascript</h2>
+           <a href="#">See All Article</a>
+       </div>
+       <div class="Fundamental">
+           <div class="Fundamental-card">
+               <img src="img-featured/java-1.png" alt="">
+               <h3>array in javasript - Learn JS #3</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/java-2.png" alt="">
+               <h3>Fundamental of javascript</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/java-3.png" alt="">
+               <h3>7 project with javascript you must try for your portfolio</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/java-4.png" alt="">
+               <h3>make simple calculator with javascript</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+       </div>
+   </section>
+   <section class="featured">
+       <div class="css-category">
+           <h2>React JS</h2>
+           <a href="#">See All Article</a>
+       </div>
+       <div class="Fundamental">
+           <div class="Fundamental-card">
+               <img src="img-featured/react-1.png" alt="">
+               <h3>first month of leaning react jS</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/react-2.png" alt="">
+               <h3>build markdown editor with react JS</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/react-3.png" alt="">
+               <h3>getting started with react JS</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+           <div class="Fundamental-card">
+               <img src="img-featured/tik-tak.png" alt="">
+               <h3>Make tic tac toe games with react JS</h3>
+               <div class="meta">
+                   <img src="img-dasteen/Ellipse%2080.svg" alt="">
+                   <span>Dasteen</span>
+                   <span>Jan 10, 2022     ∙     3 min read</span>
+               </div>
+           </div>
+       </div>
+   </section>
+    <button class="but">More Article</button>
+    <section class="subscribe-section">
+        <div class="subscribe-box">
+            <img src="" alt="">
+            <h2>Subscribe For the lastest updates</h2>
+            <p>Subscribe to newsletter and never miss the new post every week.</p>
+            <div class="subscribe-form">
+                <input type="email" placeholder="Enter your email here....">
+                <button>Subscribe</button>
+            </div>
+        </div>
+    </section>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-col">
+            <h3>Dasteen<span>.blog</span></h3>
+            <p>Digitaldastin by Dastin Darmawan</p>
+            <div class="logo">
+                <span style="background: url(img-featured/M.png) lightgray 50% / contain no-repeat;">M</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20" fill="none">
+  <path d="M23 1.01006C22.0424 1.68553 20.9821 2.20217 19.86 2.54006C19.2577 1.84757 18.4573 1.35675 17.567 1.13398C16.6767 0.911216 15.7395 0.967251 14.8821 1.29451C14.0247 1.62177 13.2884 2.20446 12.773 2.96377C12.2575 3.72309 11.9877 4.62239 12 5.54006V6.54006C10.2426 6.58562 8.50127 6.19587 6.93101 5.4055C5.36074 4.61513 4.01032 3.44869 3 2.01006C3 2.01006 -1 11.0101 8 15.0101C5.94053 16.408 3.48716 17.109 1 17.0101C10 22.0101 21 17.0101 21 5.51006C20.9991 5.23151 20.9723 4.95365 20.92 4.68006C21.9406 3.67355 22.6608 2.40277 23 1.01006V1.01006Z" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M17 2H7C4.23858 2 2 4.23858 2 7V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V7C22 4.23858 19.7614 2 17 2Z" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M16 11.3701C16.1234 12.2023 15.9812 13.0523 15.5937 13.7991C15.2062 14.5459 14.5931 15.1515 13.8416 15.5297C13.0901 15.908 12.2384 16.0397 11.4077 15.906C10.5771 15.7723 9.80971 15.3801 9.21479 14.7852C8.61987 14.1903 8.22768 13.4229 8.09402 12.5923C7.96035 11.7616 8.09202 10.91 8.47028 10.1584C8.84854 9.40691 9.45414 8.7938 10.2009 8.4063C10.9477 8.0188 11.7977 7.87665 12.63 8.00006C13.4789 8.12594 14.2648 8.52152 14.8716 9.12836C15.4785 9.73521 15.8741 10.5211 16 11.3701Z" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M17.5 6.5H17.51" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M16 8C17.5913 8 19.1174 8.63214 20.2426 9.75736C21.3679 10.8826 22 12.4087 22 14V21H18V14C18 13.4696 17.7893 12.9609 17.4142 12.5858C17.0391 12.2107 16.5304 12 16 12C15.4696 12 14.9609 12.2107 14.5858 12.5858C14.2107 12.9609 14 13.4696 14 14V21H10V14C10 12.4087 10.6321 10.8826 11.7574 9.75736C12.8826 8.63214 14.4087 8 16 8V8Z" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M6 9H2V21H6V9Z" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M4 6C5.10457 6 6 5.10457 6 4C6 2.89543 5.10457 2 4 2C2.89543 2 2 2.89543 2 4C2 5.10457 2.89543 6 4 6Z" stroke="#2B2C34" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></span>
+            </div>
+        </div>
+        <div class="footer-col">
+            <h4>Category</h4>
+            <ul>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>Tailwind</li>
+                <li>React JS</li>
+                <li>More Category</li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>About Me</h4>
+            <ul>
+                <li>About Me</li>
+                <li>Projects</li>
+                <li>Achievement</li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>GET IN TOUCH</h4>
+            <ul>
+                <li>+62-8XXX-XXX-XX</li>
+                <li>demo@gmail.com</li>
+            </ul>
+        </div>
+        <div class="footer-col">
+            <h4>FOLLOW US</h4>
+            <ul>
+                <li>Medium</li>
+                <li>Instagram</li>
+                <li>Twitter</li>
+                <li>Facebook</li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-bottom">© 2025 Digitaldastin</div>
+</footer>
 </body>
 </html>
